# cse284-litegwas

./: .gitignore  README.md  pyproject.toml  requirements.txt
litegwas/: core.py  io.py  plots.py  run.py  sim.py
litegwas_input/: causal_truth.tsv  covar.tsv  pheno.tsv  snp.tsv
notebooks/: compare_to_plink.ipynb  eur_ancestry_gwas.ipynb  plots_plink.ipynb
notebooks/data/: phenotypes_casecontrol.txt
notebooks/results/: gwas_results.assoc.logistic  gwas_values.csv
results/: litegwas.tsv  plink2.y.glm.linear
scripts/: compare_to_plink2.py  compare_to_plink2_alleleaware.py  eval_recovery.py  from_plink2_to_litegwas.py  run_synth_demo.sh  single_snp_gwas.ipynb
