[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litegwas"
version = "0.1.0"
description = "A lightweight GWAS pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[project.scripts]
litegwas = "litegwas.run:main"

[tool.setuptools]
packages = ["litegwas"]